# AutonomousVehicle

src/beginner_tutorials/: CMakeLists.txt  package.xml
src/beginner_tutorials/scripts/: location_server.py  simple_navigation_goals.py
src/beginner_tutorials/srv/: LocationSrv.srv
src/my_camera/: package.xml
src/my_camera/launch/: minimal.launch
src/my_simulations/: package.xml
src/my_simulations/models/my1stmodel/: model.sdf
src/my_simulations/world/: empty_world.world
src/ros_tutorials_parameter/: CMakeLists.txt  package.xml
src/ros_tutorials_service/: CMakeLists.txt  package.xml
src/ros_tutorials_topic/: CMakeLists.txt  package.xml
src/ros_tutorials_topic/src/: topic_publisher.cpp
src/simple_navigation_goals/scripts/: simple_navigation_goals
